--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "description": "adamjaminski",
   "main": "gulpfile.js",
   "devDependencies": {
-    "browser-sync": "*",
-    "gulp": "^4.0.0",
+    "browser-sync": "^2.24.5",
+    "critical": "*",
+    "gulp": "3.9.1",
     "gulp-autoprefixer": "*",
+    "gulp-cache": "^1.0.2",
     "gulp-clean-css": "*",
-    "gulp-sass": "*",
+    "gulp-concat": "^2.6.1",
+    "gulp-css-purge": "*",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-rename": "*",
-    "gulp-sourcemaps": "*"
+    "gulp-sass": "*",
+    "gulp-size": "^3.0.0",
+    "gulp-uglify-es": "^1.0.4",
+    "workbox-build": "^3.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
