--- a/package.json
+++ b/package.json
@@ -6,19 +6,14 @@
   "main": "gulpfile.js",
   "devDependencies": {
     "browser-sync": "^2.24.5",
-    "critical": "*",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "*",
-    "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-css-purge": "*",
-    "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "*",
     "gulp-sass": "*",
-    "gulp-size": "^3.0.0",
-    "gulp-uglify-es": "^1.0.4",
-    "workbox-build": "^3.3.1"
+    "gulp-uglify-es": "^1.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
